
[project]
name = "quest-openenv"
version = "1.0.0"
description = "OpenEnv simulation of Meta Quest-class MR OS reliability layer"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "psutil==6.1.0",
    "openai>=2.7.2",
    "requests==2.32.3",
    "pyyaml==6.0.2",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
